# opentodolist

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .qmake.conf  .readthedocs.yaml  BuildLinuxAppImage.cmake  BuildLinuxInstaller.cmake  BuildWindowsInstaller.cmake  CMakeLists.txt  Doxyfile  OpenTodoList.desktop.in  PKGBUILD  README  README.md  appimage.pri  config.pri  deployment.pri  installer.pri  net.rpdev.OpenTodoList.appdata.xml  net.rpdev.OpenTodoList.flatpakref  net.rpdev.OpenTodoList.json  net.rpdev.OpenTodoList.metainfo.xml  opentodolist.pro  qtcreator-codingstyle.xml  snapcraft.yaml  utils.pri
OpenTodoList/: CMakeLists.txt  OpenTodoList.desktop.in  OpenTodoList.dox  OpenTodoList.pro  OpenTodoList.qrc  OpenTodoList.rc  applicationinstance.cpp  applicationviewer.cpp  applicationviewer.h  commandhandler.h  deploy.pri  files-js.pri  files-res.pri  files-style-neutral.pri  files-style-widget.pri  files.pri  imageprovider.cpp  imageprovider.h  main.cpp  resources-js.qrc  resources-res.qrc  resources-style-neutral.qrc  resources-style-widget.qrc  resources.qrc
OpenTodoList/android/: AndroidManifest.xml  gradle.properties
OpenTodoList/doc/: databaseproto.dox  doxygen-opentodolist.css
OpenTodoList/qtquick2applicationviewer/: qtquick2applicationviewer.cpp  qtquick2applicationviewer.h  qtquick2applicationviewer.pri
OpenTodoList/src/: applicationinstance.h  commandhandler.cpp  main.cpp  pluginsloader.h  statusnotifiericon.cpp  statusnotifiericon.h
OpenTodoListCore/: CMakeLists.txt  OpenTodoListCore.pro  OpenTodoListCore.qrc  abstracttodo.cpp  abstracttodo.h  abstracttodolist.cpp  abstracttodolist.h  backendrunner.cpp  backendrunner.h  backendwrapper.cpp  backendwrapper.h  documentformatter.h  objectmodel.cpp  objectmodel.h  opentodolistcore.cpp  opentodolistcore.h  opentodolistcore_global.h  opentodolistcoreinterfaces.h  opentodolistcoreqmlplugin.cpp  opentodolistcoreqmlplugin.h  opentodolistinterfaces.cpp  opentodolistinterfaces.h  pluginsloader.cpp  pluginsloader.h  qmldir  settings.cpp  settings.h  todo.cpp  todo.h  todolist.cpp  todolist.h  todolistfactory.cpp  todolistfactory.h  todolistlibrary.cpp  todolistlibrary.h  todolistmodel.cpp  todolistmodel.h  todoliststorage.cpp  todoliststorage.h  todoliststoragequery.cpp  (+5 more)
OpenTodoListDesktopQml/: CMakeLists.txt  OpenTodoListDesktopQml.desktop  OpenTodoListDesktopQml.pro  OpenTodoListDesktopQml_harmattan.desktop  applicationviewer.cpp  applicationviewer.h  main.cpp
app/: CMakeLists.txt  ExportOptions.plist  Info.plist.in  OpenTodoList.entitlements  OpenTodoList.notifyrc  OpenTodoList.rc  app.pro  appstartup.cpp  appstartup.h  fontawesome.qrc  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  res.qrc  translations.qrc
app/+android/: qtquickcontrols2.conf
app/+windows/: qtquickcontrols2.conf
app/Actions/: CopyTodo.qml  CopyTopLevelItem.qml  DeleteCompletedChildren.qml  DeleteItem.qml  MoveTodo.qml  PromoteTask.qml  RenameItem.qml  ResetDueTo.qml  SetDueNextWeek.qml  SetDueThisWeek.qml  SetDueTo.qml  SetDueToday.qml  SetDueTomorrow.qml  SetManualProgressAction.qml
app/Components/: Action.qml  ApplicationShortcuts.qml  ApplicationToolBar.qml  ApplicationToolBarActions.qml  ApplicationWindow.qml  AutoScrollOverlay.qml  BusyIndicator.qml  Button.qml  ButtonGroup.qml  CheckBox.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Empty.qml  Frame.qml  Heading.qml  ItemAction.qml  ItemActionMenu.qml  ItemActionToolButtons.qml  ItemDelegate.qml  Label.qml  MarkdownConverter.qml  MarkdownLabel.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  Pane.qml  PullToRefreshOverlay.qml  RadioButton.qml  RoundButton.qml  ScrollBar.qml  ScrollView.qml  Slider.qml  StackView.qml  SwipeDelegate.qml  TextArea.qml  TextField.qml  ToolBar.qml  (+3 more)
app/Controls/: Action.qml  ApplicationWindow.qml  BusyIndicator.qml  Button.qml  ButtonGroup.qml  CheckBox.qml  ComboBox.qml  DayOfWeekRow.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  GroupBox.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  MonthGrid.qml  Page.qml  Pane.qml  PasswordField.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RoundButton.qml  ScrollBar.qml  ScrollIndicator.qml  ScrollView.qml  Slider.qml  SpinBox.qml  StackView.qml  SwipeDelegate.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  ToolTip.qml  (+1 more)
app/Dialogs/: FileDialog.qml  FilesDialog.qml
app/Fonts/: Fonts.qml  Icons.qml  qmldir
app/Menues/: ColorMenu.qml  LibraryPageActions.qml  LibraryPageMenu.qml
app/Pages/: AboutPage.qml  AboutThirdPartyPage.qml  AccountTypeSelectionPage.qml  AccountTypeSelectionPageForm.ui.qml  AccountsPage.qml  AccountsPageForm.ui.qml  EditDropboxAccountPage.qml  EditNextCloudAccountPage.qml  EditOwnCloudAccountPage.qml  EditWebDAVAccountPage.qml  EditWebDAVAccountPageForm.ui.qml  ImagePage.qml  LibraryPage.qml  LogViewPage.qml  MarkdownEditorPage.qml  NewDropboxAccountPage.qml  NewLibraryFromAccountPage.qml  NewLibraryFromAccountPageForm.ui.qml  NewLibraryInFolderPage.qml  NewLibraryInFolderPageForm.ui.qml  NewLibraryPage.qml  NewLibraryPageForm.ui.qml  NewLocalLibraryPage.qml  NewLocalLibraryPageForm.ui.qml  NewNextCloudAccountPage.qml  NewOwnCloudAccountPage.qml  NewWebDAVAccountPage.qml  NewWebDAVAccountPageForm.ui.qml  NotePage.qml  ProblemsPage.qml  ScheduleViewPage.qml  (+11 more)
lib/: CMakeLists.txt  abstractitemmodel.h  application.cpp  application.h  complexitem.cpp  complexitem.h  documentformatter.cpp  documentformatter.h  fileutils.cpp  fileutils.h  filtermodel.cpp  filtermodel.h  image.cpp  image.h  item.cpp  item.h  lib.pri  lib.pro  library.cpp  library.h  libraryfactory.cpp  libraryfactory.h  locallibraryfactory.cpp  locallibraryfactory.h  migrator_1_x_to_2_x.cpp  migrator_1_x_to_2_x.h  note.cpp  note.h  opentodolist_config.h.in  opentodolist_version.h.in  opentodolistqmlextensionsplugin.cpp  opentodolistqmlextensionsplugin.h  task.cpp  task.h  tasklist.h  todo.cpp  todo.h  todolist.cpp  todolist.h  todoslist.h  (+7 more)
test/: CMakeLists.txt  test-utils.h  test.pro
(+1131 files in other folders)
